# aina-gateway

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
deploy/: org.pixelmemory.gateway.plist  org.pixelmemory.tunnel.plist
scripts/: fix_chats_source.py  fix_memories_migration.py  migrate_add_row_id.py  setup_schema.py
src/: __init__.py  auth.py  config.py  server.py  tools.py
tests/: test_gateway.py
